incre. decre. butns refactored with event delegation, added MaxPax and Min Pax + domainnameurl to config

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <h2 class="travellers-label">Number of travellers</h2>
         <div class="travellers-input">
           <button
-            class="travellers-decrement"
+            class="btn__inline travellers-decrement"
             aria-label="Decrement travellers"
           >
             -
           </button>
           <span class="travellers-count">1</span>
           <button
-            class="travellers-increment"
+            class="btn__inline travellers-increment"
             aria-label="Increment travellers"
           >
             +
